--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 body{
   min-height: 100vh;
-  background-color: #191919;
-  color: white;
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
@@ -9,15 +7,20 @@ body{
   align-items: center;
 }
 h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   text-align: center;
+  font-size: clamp(1.25rem, 1.0938rem + 0.5vw, 1.375rem);
 }
 
 input {
   width: 100%;
   margin: 10px 0;
   padding: 8px 0px;
-  border-radius: 5px;
-  border: none;
+  border-radius: 3px;
+  border: 3px solid #191919;
 }
 
 button {
@@ -26,10 +29,21 @@ button {
   margin-top: 2px;
   border-radius: 5px;
   border: none;
-  background-color: #282828;
+  background-color: #191919;
   color: white;
+  font-weight: 600;
 }
 
 button:hover {
   opacity: 80%;
+}
+
+.card {
+  background-color: white ;
+  color: #191919;
+  border: 3px solid #191919;
+  padding: 12px 20px;
+  box-shadow: 10px 10px #191919;
+  margin: 20px;
+  max-width: 500px;
 }
